# TestPsPlugin

./: .gitignore  CMakeLists.txt  CppProperties.json  build.bat
msbuild/tutorial_automation/: tutorial_automation.8li  tutorial_automation.exp  tutorial_automation.lib  tutorial_automation.zxp  tutorial_automation_pipl.rc  tutorial_automation_pipl.res  tutorial_automation_pipl.rr
src/: test_automation_globals.hpp  test_automation_main.cpp  tutorial_automation_main.cpp  tutorial_automation_pipl.r
